--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,16 @@
 @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
 
 body {
-    padding: 2em 23em;
+    padding: 1em 1em;
     background:lightgray;
+    height: 100%;
+    margin:0; 
+}
+
+.impress-container {
+  position: absolute;
+  overflow: hidden;
+  left: 0px;
+  right: 0px;
+  height: 400px;
 }
