--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,10 +2,20 @@
      <div layout="row" style="width: 100%;">
         <div flex>    
 -->
-            <div style="float: right;">   
-<!-- <span class="example-spacer"  flex></span> style="top: 50; left: 100;"-->	
-				<button  class="mat-mini-fab mat-primary " color="Accent" style="color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button>
-				<button  class="mat-mini-fab mat-primary " color="primary" style="color:primary; position: absolute; right:  50px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon><!--
+<!--
+				<p color="Accent" style="color:primary; display: flex; justify-content: center; margin:0 !important;">World a long long long long long long long sample</p>
+-->
+				
+            <div class="map-buttons" style="float: right; " >   
+<!-- <span class="example-spacer"  flex></span> style="top: 50; left: 100;" 
+<button  class="mat-raised-button mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute; "></button>
+-->
+
+
+<p color="Accent" style="z-index: 4; color:white; position: absolute;  right: 100px; margin-top: 1px; top: 0px !important; mix-blend-mode: difference;">{{currentImpressStep_id}}</p>
+
+				<button  (click)="impressComponent.goto('world')" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button>
+				<button  class="mat-mini-fab mat-primary " color="primary" style="z-index: 4; color:primary; position: absolute; right:  50px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon><!--
 				<button  class="mat-fab mat-primary mat-fab-bottom-right" 
 				style="
 	top: auto !important;
@@ -24,9 +34,30 @@
   <button mat-mini-fab color="warn">Warn</button>
   <button mat-mini-fab disabled>Disabled</button>-->
             </div>   
+			<!--
+			<div  class="impress-container">
 			
+			<div id="my-impress" class="impress-container" impress>
+			<div class="step"  data-x="0"  data-y="0" data-z="0" data-scale="1" data-rotate  ="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">
+			</div>
+			</div>
+			-->
+			<!--
+			<img mat-card-image src="assets\img\world.svg">
+			<div  class="impress-container">
+			</div>
+			
+			<div  class="impress-container" >
+            <div id="impress-compnt" impress ></div>
+			</div>
+			-->
+			<div  class="impress-container" >
+            <div id="impress-compnt" impress ></div>
+			</div>
+<!--
             <img mat-card-image src="assets\img\world.svg">
-<!--			
+-->
+			<!--			
         </div>
      </div>
 </div>
