--- a/src/app/impress/impress.component.html
+++ b/src/app/impress/impress.component.html
@@ -1,6 +1,77 @@
 ﻿<!--<div id="impress">
 
+
+<img mat-card-image src="assets\img\world.svg">-->
+<!--
+<div class="step"  data-x="0"  data-y="0" data-z="0" data-scale="1" data-rotate  ="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">
+    
+	<img mat-card-image src="assets/img/world-ns.svg">
+	<img mat-card-image src="img/world-ns.svg">
+    <img mat-card-image src="./world-ns.svg">
+	<img mat-card-image src="/assets/img/world-ns.svg">
+	<img mat-card-image src="/img/world-ns.svg">
+	
+</div>
+style="width:100%; height:100%; top: 1%; left: 1%;"
 -->
+<div id="impress"  data-transition-duration="500" data-autoplay="1"  data-min-scale="1.3" >
+<!-- data-scale="450" -->
+<div class="step" id="World" data-x="10"  data-y="10" data-z="0" data-scale="4500" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">
+	<!--<img style="width:100%; height:800px" src="assets/img/world-ns.svg">-->
+	<img style="width:100%; height:100%" src="assets/img/world-ns.svg">
+</div>
+<div class="step" id="Europe"          data-x="37700" data-y="-505430" data-z="0" data-scale="1000" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Europe</div>
+<div class="step" id="North-America"   data-x="-1052160" data-y="-457130" data-z="0" data-scale="900" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">North-America</div>
+<div class="step" id="Central-America" data-x="-902630" data-y="-140100" data-z="0" data-scale="800" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Central-America</div>
+<div class="step" id="Oceania"         data-x="1440000" data-y="396750" data-z="0" data-scale="1500" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Oceania</div>
+<div class="step" id="Asia"            data-x="1175810" data-y="-182580" data-z="0" data-scale="1700" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Asia</div>
+<div class="step" id="Middle-East"     data-x="533860" data-y="-230000" data-z="0" data-scale="1000" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Middle-East</div>
+                                       
+<div class="step" id="AU" data-x="1396980" data-y="400000" data-z="0" data-scale="1000" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Australia
+<!-- <svg
+    xmlns:dc="http://purl.org/dc/elements/1.1/"
+   xmlns:cc="http://creativecommons.org/ns#"
+   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+   xmlns:svg="http://www.w3.org/2000/svg"
+   xmlns="http://www.w3.org/2000/svg"
+   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
+   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
+   enable_background="new 0 0 2000 1001"
+   height="2000px"
+   pretty_print="False"
+   style="stroke-linejoin: round; stroke:#000; fill: none;"
+   version="1.1"
+   viewBox="0 0 2000 1000"
+   width="4000px"><path
+     inkscape:connector-curvature="0"
+     id="AU"
+     data-name="Australia"
+     data-id="AU"
+	 color="red"
+     d="m 126.7,532 -3,-0.5 -1.9,2.9 -0.6,5.4 -2.1,4 -0.5,5.3 3,0.2 0.8,0.3 6.6,-4.3 0.6,1.7 4,-4.9 3.2,-2.2 4.5,-7.3 -2.8,-0.5 -4.8,1.2 -3.4,0.9 -3.6,-2.2 z m 50.1,-172.3 0.5,-2.3 0.1,-3.6 -1.6,-3.2 0.1,-2.7 -1.3,-0.8 0.1,-3.9 -1.2,-3.2 -2.3,2.4 -0.4,1.8 -1.5,3.5 -1.8,3.4 0.6,2.1 -1.2,1.3 -1.5,4.8 0.1,3.7 -0.7,1.8 0.3,3.1 -2.6,5 -1.3,3.5 -1.7,2.9 -1.7,3.4 -4.1,2.1 -4.9,-2.1 -0.5,-2 -2.5,-1.6 -1.6,0 -3.3,-3.8 -2.5,-2.2 -3.9,-2 -3.9,-3.5 -0.1,-1.8 2.5,-3.1 2.1,-3.2 -0.3,-2.6 1.9,-0.2 2.5,-2.5 2,-3.4 -2.2,-3.2 -1.5,1.2 -2,-0.5 -3.5,1.8 -3.2,-2 -1.7,0.7 -4.5,-1.6 -2.7,-2.7 -3.5,-1.5 -3.1,0.9 3.9,2.1 -0.3,3.2 -4.8,1.2 -2.8,-0.7 -3.6,2.2 -2.9,3.7 0.6,1.5 -2.7,1.7 -3.4,5.1 0.6,3.5 -3.4,-0.6 -3.5,0 -2.5,-3.8 -3.7,-2.9 -2.8,0.8 -2.6,0.9 -0.3,1.6 -2.4,-0.7 -0.3,1.8 -3,1.1 -1.7,2.5 -3.5,3.1 -1.4,4.8 -2.3,-1.3 -2.2,3.1 1.5,3 -2.6,1.2 -1.4,-5.5 -4.8,5.4 -0.8,3.5 -0.7,2.5 -3.8,3.3 -2,3.4 -3.5,2.8 -6.1,1.9 -3.1,-0.2 -1.5,0.6 -1.1,1.4 -3.5,0.7 -4.7,2.4 -1.4,-0.8 -2.6,0.5 -4.6,2.3 -3.2,2.7 -4.8,2.1 -3.1,4.4 0.4,-4.8 -3.1,4.6 -0.1,3.7 -1.3,3.2 -1.5,1.5 -1.3,3.7 0.9,1.9 0.1,2 1.6,5 -0.7,3.3 -1,-2.5 -2.3,-1.8 0.4,5.9 -1.7,-2.8 0.1,2.8 1.8,5 -0.6,5 1.7,2.5 -0.4,1.9 0.9,4.1 -1.3,3.6 -0.3,3.6 0.7,6.5 -0.7,3.7 -2.2,4.4 -0.6,2.3 -1.5,1.5 -2.9,0.8 -1.5,3.7 2.4,1.2 4,4.1 3.6,0 3.8,0.3 3.3,-2.1 3.4,-1.8 1.4,0.3 4.5,-3.4 3.8,-0.3 4.1,-0.7 4.2,1.2 3.6,-0.6 4.6,-0.2 3,-2.6 2.3,-3.3 5.2,-1.5 6.9,-3.2 5,0.4 6.9,-2.1 7.8,-2.3 9.8,-0.6 4,3.1 3.7,0.2 5.3,3.8 -1.6,1.5 1.8,2.4 1.3,4.6 -1.6,3.4 2.9,2.6 4.3,-5.1 4.3,-2.1 6.7,-5.5 -1.6,4.7 -3.4,3.2 -2.5,3.7 -4.4,3.5 5.2,-1.2 4.7,-4.4 -0.9,4.8 -3.2,3.1 4.7,0.8 1.3,2.6 -0.4,3.3 -1.5,4.9 1.4,4 4,1.9 2.8,0.4 2.4,1 3.5,1.8 7.2,-4.7 3.5,-1.2 -2.7,3.4 2.6,1.1 2.7,2.8 4.7,-2.7 3.8,-2.5 6.3,-2.7 6,-0.2 4.2,-2.3 0.9,-2 3,-4.5 3.9,-4.8 3.6,-3.2 4.4,-5.6 3.3,-3.1 4.4,-5 5.4,-3.1 5,-5.8 3.1,-4.5 1.4,-3.6 3.8,-5.7 2.1,-2.9 2.5,-5.7 -0.7,-5.4 1.7,-3.9 1.1,-3.7 0,-5.1 -2.8,-5.1 -1.9,-2.5 -2.9,-3.9 0.7,-6.7 -1.5,1 -1.6,-2.8 -2.5,1.4 -0.6,-6.9 -2.2,-4 1,-1.5 -3.1,-2.8 -3.2,-3 -5.3,-3.3 -0.9,-4.3 1.3,-3.3 -0.4,-5.5 -1.3,-0.7 -0.2,-3.2 -0.2,-5.5 1.1,-2.8 -2.3,-2.5 -1.4,-2.7 -3.9,2.4 -1.2,-5 z"
+     style="fill:red;fill-rule:evenodd" /><text>HELLO</text>
+</svg> -->
+</div>
+<div class="step" id="CA" data-x="-937220" data-y="-594640" data-z="0" data-scale="600" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Canada</div>
+<div class="step" id="CH" data-x="32700" data-y="-460000" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Switzerland</div>
+<div class="step" id="CR" data-x="-890000" data-y="-20000" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Costa Rica</div>
+<div class="step" id="DK" data-x="38080" data-y="-567730" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Denmark</div>
+<div class="step" id="EE" data-x="183770" data-y="-597620" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Estonia</div>
+<div class="step" id="GB" data-x="-57860" data-y="-521600" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;United Kingdom</div>
+<div class="step" id="IN" data-x="802670" data-y="-141900" data-z="0" data-scale="550" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">India</div>
+<div class="step" id="IS" data-x="-201130" data-y="-668370" data-z="0" data-scale="250" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Iceland</div>
+<div class="step" id="IL" data-x="303860" data-y="-300040" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Israel</div>
+<div class="step" id="IT" data-x="71570" data-y="-410920" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Italy</div>
+<div class="step" id="JP" data-x="1396880" data-y="-326440" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Japan</div>
+<div class="step" id="NL" data-x="-340" data-y="-522610" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Netherlands</div>
+<div class="step" id="PL" data-x="139950" data-y="-520180" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Poland</div>
+<div class="step" id="SK" data-x="143580" data-y="-482570" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slovakia</div>
+<div class="step" id="US" data-x="-1052160" data-y="-357130" data-z="0" data-scale="600" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">United States</div>
+<div class="step" id="FR" data-x="-22840" data-y="-456750" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;France</div>
+<div class="step" id="ES" data-x="-81360" data-y="-380050" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Spain</div>
+<div class="step" id="SG" data-x="1035810" data-y="72580" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Singapore</div>
+
+<!--
 <step-list></step-list>
 <step-rey></step-rey>
 <step-pr></step-pr>
@@ -8,13 +79,14 @@
 <step-code></step-code>
 <step-paramount></step-paramount>
 <step-greetings></step-greetings>
-<!---->
+
 <step-accesso></step-accesso>
-<!--
+
 <step-hobbies></step-hobbies>
 <step-pets></step-pets>
-
-
+-->
+</div>
+<!--
 <div id="impress">
 <div id="bored" class="step slide" data-x="-1000" data-y="-1500">
         <q>Arenn't you just <b>bored</b> with all those slides-based presentations?</q>
