--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -12,10 +12,12 @@
 -->
 
 
-<p color="Accent" style="z-index: 4; color:white; position: absolute;  right: 100px; margin-top: 1px; top: 0px !important; mix-blend-mode: difference;">{{currentImpressStep_id}}</p>
-
-				<button  (click)="impressComponent.goto('world')" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button>
-				<button  class="mat-mini-fab mat-primary " color="primary" style="z-index: 4; color:primary; position: absolute; right:  50px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon><!--
+<p color="Accent" style="z-index: 4; color:white; position: absolute;  right: 100px; margin-top: 1px; top: 0px !important; mix-blend-mode: difference;">{{currentZoneName}}</p>
+				<!-- KO ?!
+				<button  (click)="impressComponent.goto(this.currentImpressStep_id)" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
+				-->
+				<button  (click)="impressComponent.goto(this.currentImpressStep_id)" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
+				<button  class="mat-mini-fab mat-primary " color="primary" style="z-index: 4; color:primary; position: absolute; right:  50px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon>
 				<button  class="mat-fab mat-primary mat-fab-bottom-right" 
 				style="
 	top: auto !important;
@@ -26,8 +28,8 @@
 					     <mat-icon class="material-icons" aria-label="Google Hangout">face</mat-icon>
 					<mat-icon mat-font-icon="mdi mdi-check">border clear</mat-icon
 					<mat-icon mat-font-icon="mdi mdi-check">border inner</mat-icon>
-	-->
-				</button><!-- 
+	
+				</button>--><!-- 
 				<button mat-mini-fab>Basic</button>
   <button mat-mini-fab color="primary">Primary</button>
   <button mat-mini-fab color="accent">Accent</button>
