--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -16,7 +16,7 @@
 				<!-- KO ?!
 				<button  (click)="impressComponent.goto(this.currentImpressStep_id)" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
 				-->
-				<button  (click)="impressComponent.goto(this.currentImpressStep_id)" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
+				<button  (click)="impressComponent.goto('World')" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
 				<button  class="mat-mini-fab mat-primary " color="primary" style="z-index: 4; color:primary; position: absolute; right:  50px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon>
 				<button  class="mat-fab mat-primary mat-fab-bottom-right" 
 				style="
