--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -10,14 +10,15 @@
 <!-- <span class="example-spacer"  flex></span> style="top: 50; left: 100;" 
 <button  class="mat-raised-button mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute; "></button>
 -->
-
+<!-- https://github.com/angular/material2/blob/master/src/lib/icon/icon.md -->
+<button  (click)="sidenav.toggle()"  class="mat-button mat-accent "  style="z-index: 4;  position: absolute; left: 0px !important; top: 0px !important;"><mat-icon mat-font-icon="material-icons more_horiz" style="position: absolute; top:8px; left:7px;">more_horiz</mat-icon></button>
 
 <p color="Accent" style="z-index: 4; color:white; position: absolute;  right: 100px; margin-top: 1px; top: 0px !important; mix-blend-mode: difference;">{{currentZoneName}}</p>
 				<!-- KO ?!
 				<button  (click)="impressComponent.goto(this.currentImpressStep_id)" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
 				-->
-				<button  (click)="impressComponent.goto('World')" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 100px !important; bottom: 60px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
-				<button  class="mat-mini-fab mat-primary " color="primary" style="z-index: 4; color:primary; position: absolute; right:  50px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon>
+				<button  (click)="impressComponent.goto('World')" class="mat-mini-fab mat-primary " color="Accent" style="z-index: 4; color:primary; position: absolute;  right: 50px !important; bottom: 80px !important;"><mat-icon class="material-icons mat-48" style="position: absolute; top:7px; left:8px;">eject</mat-icon></button><!--
+				<button  class="mat-mini-fab mat-primary " color="primary" style="z-index: 4; color:primary; position: absolute; right:  100px !important; bottom: 60px !important;"><mat-icon mat-font-icon="mdi mdi-check" style="position: absolute; top:8px; left:7px;">view_module</mat-icon>
 				<button  class="mat-fab mat-primary mat-fab-bottom-right" 
 				style="
 	top: auto !important;
