Catch and show sliders value changes

--- a/src/app/impress/impress.component.html
+++ b/src/app/impress/impress.component.html
@@ -52,7 +52,7 @@ style="width:100%; height:100%; top: 1%; left: 1%;"
      style="fill:red;fill-rule:evenodd" /><text>HELLO</text>
 </svg> -->
 </div>
-<div class="step" id="CA" data-x="-937220" data-y="-594640" data-z="0" data-scale="600" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Canada</div>
+<div class="step" id="CA" data-x="-937220" data-y="-594640" data-z="0" data-scale="600" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Canada</div>
 <div class="step" id="CH" data-x="32700" data-y="-460000" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Switzerland</div>
 <div class="step" id="CR" data-x="-890000" data-y="-20000" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">Costa Rica</div>
 <div class="step" id="DK" data-x="38080" data-y="-567730" data-z="0" data-scale="300" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Denmark</div>
