--- a/src/app/impress/impress.component.css
+++ b/src/app/impress/impress.component.css
@@ -10,7 +10,9 @@ body.impress-on-pr {
 .step img {
     max-width: 100%;
 }
-
+.step!.active {
+visibility :hidden
+}
 .step.active {
   transform: rotate(-345deg);
   transition-delay: 0.25s;
