--- a/src/app/impress/impress.component.html
+++ b/src/app/impress/impress.component.html
@@ -15,8 +15,9 @@
 style="width:100%; height:100%; top: 1%; left: 1%;"
 -->
 <div id="impress"  data-transition-duration="500" data-autoplay="1"  data-min-scale="1.3" >
-<!-- data-scale="450" -->
-<div class="step" id="World" data-x="10"  data-y="10" data-z="0" data-scale="4500" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">
+<!-- data-scale="450" 
+<div class="step" id="Dummy">HELLO<div>-->
+<div class="step" id="START" data-x="10"  data-y="10" data-z="0" data-scale="4500" data-rotate="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">
 	<!-- <img style="width:100%; height:800px" src="assets/img/world-ns.svg">
 	<img style="width:100%; height:100%" src="assets/img/world-ns.svg">  -->
  <svg
