--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -13,7 +13,10 @@
 <!-- https://github.com/angular/material2/blob/master/src/lib/icon/icon.md -->
 <button  (click)="sidenav.toggle()"  class="mat-button mat-accent "  style="z-index: 4;  position: absolute; left: 0px !important; top: 0px !important;"><mat-icon mat-font-icon="material-icons more_horiz" style="position: absolute; top:8px; left:7px;">more_horiz</mat-icon></button>
 
-<p color="Accent" style="z-index: 4; color:white; position: absolute;  left: 60px; margin-top: 1px; bottom: 75px !important; "><mat-icon svgIcon="color-scale" style="width: 200px; height: 200px position: absolute; top:8px; left:40px;">.</mat-icon></p>
+<p color="Accent" style="z-index: 4; color:white; position: absolute;  left: 60px; margin-top: 1px; bottom: 75px !important; "><mat-icon svgIcon="color-scale" style="width: 200px; height: 200px position: absolute; top:8px; left:40px;"></mat-icon></p>
+
+<p color="Accent" style="z-index: 4; color:yellow; position: absolute;  left: 190px; margin-top: 1px; bottom: 67px !important; mix-blend-mode: difference;"><font style="text-align:right; " size="30">{{getCurrentIncidence(currentImpressStep_id)}}</font></p>
+
 
 <p color="Accent" style="z-index: 4; color:white; position: absolute;  right: 100px; margin-top: 1px; top: 0px !important; mix-blend-mode: difference;">{{currentZoneName}}</p>
 				<!-- KO ?!
