context selectors addition

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -76,10 +76,18 @@
       </button>
     </div>
     -->
+	<span style="text-align: center;"><h3>Context choice:</h3></span> 
+	<span style="text-align: left;">
+	<!-- [sliders]="(zoneSliders)" -->
+	<app-context-form></app-context-form>
+	<!-- <app-zone-sliders [sliders]="zoneSliders" ></app-zone-sliders> show all components at once -->
+	<!-- <app-zone-sliders [sliders]="zoneSliders" [cycling]="'0'"></app-zone-sliders> -->
+	<!-- <app-zone-sliders [sliders]="zoneSliders" [cycling]="'300'"></app-zone-sliders> -->	
+	</span> 
     <span style="text-align: center;"><h3>Significant factors</h3></span> 
 	<span style="text-align: left;">
 	<!-- [sliders]="(zoneSliders)" -->
-	<app-zone-sliders  ></app-zone-sliders>
+	<app-zone-sliders></app-zone-sliders>
 	<!-- <app-zone-sliders [sliders]="zoneSliders" ></app-zone-sliders> show all components at once -->
 	<!-- <app-zone-sliders [sliders]="zoneSliders" [cycling]="'0'"></app-zone-sliders> -->
 	<!-- <app-zone-sliders [sliders]="zoneSliders" [cycling]="'300'"></app-zone-sliders> -->	
