--- a/src/app/zone-sliders/zone-sliders.component.html
+++ b/src/app/zone-sliders/zone-sliders.component.html
@@ -1,3 +1,3 @@
-<div class="app-zone-sliders" (change)="onChildChange($event)">
+<div class="app-zone-sliders" (change)="onChange($event)">
   <ng-template slider-host ></ng-template>
 </div>
