--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -83,8 +83,8 @@
 	<!-- <app-zone-sliders [sliders]="zoneSliders" ></app-zone-sliders> show all components at once -->
 	<!-- <app-zone-sliders [sliders]="zoneSliders" [cycling]="'0'"></app-zone-sliders> -->
 	<!-- <app-zone-sliders [sliders]="zoneSliders" [cycling]="'300'"></app-zone-sliders> -->	
-	</span> 
-    <span style="text-align: center;"><h3>Significant factors</h3></span> 
+	</span>
+  <span style="text-align: center;"><h3>Significant factors</h3></span> 
 	<span style="text-align: left;">
 	<!-- [sliders]="(zoneSliders)" -->
 	<app-zone-sliders></app-zone-sliders>
@@ -241,8 +241,8 @@
   <!-- [color]="drinksTheme" [required]="drinksRequired" [disabled]="drinksDisabled"-->
   
     <mat-form-field  style="width: 100%; text-align: center;  align: center;" shouldPlaceholderFloat="false">
-      <mat-select [(ngModel)]="currentImpressStep_id"  #zoneControl="ngModel"  (change)="goto($event.value);" >
-		<mat-placeholder>search:</mat-placeholder>		
+      <mat-select [(ngModel)]="currentImpressStep_id"  #zoneControl="ngModel"  (selectionChange)="goto($event.value);" >
+		    <mat-placeholder>search:</mat-placeholder>		
         <mat-option *ngFor="let zone of zones" [value]="zone" [disabled]="zone.disabled" style="align:center; text-align: center;">
           {{ zonesService.getZoneName(zone) }}
         </mat-option>
